Fix scrollbar wrapping

--- a/index.scss
+++ b/index.scss
@@ -66,14 +66,15 @@ canvas {
         left: 0;
         bottom: 2.5vw;
         width: 100vw;
-        height: 5vh;
+        min-height: 5vh;
 
         flex-direction: row;
         
         .indicators {
             padding: 0.5rem 1rem;
-            height: 1rem;
+            min-height: 1rem;
             flex-direction: row;
+            max-width: 80%;
         }
         
         .indicator-container {
@@ -88,13 +89,20 @@ canvas {
         top: 0;
         left: 2.5vw;
         height: 100vh;
-        width: 5vw;
+        min-width: 5vw;
 
         flex-direction: column;
         
         .indicators {
-            padding: 2rem 0.5rem;
-            flex-direction: column;
+            padding: 2rem 1.5rem;
+            flex-direction: row;
+            writing-mode: vertical-lr;
+
+            max-height: 80%;
+
+            .indicator-container {
+                flex-direction: column;
+            }
         }
 
         
@@ -118,6 +126,9 @@ canvas {
         display: flex;
         justify-content: center;
         gap: 2.5rem;
+        flex-wrap: wrap;
+
+
 
         .indicator-container {
             display: flex;
